--- a/Actualizar.html
+++ b/Actualizar.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="/assets/firebase/Firebase.js" type="module"></script>
-    <script src="/assets/js/scrip.js" type="module"></script>
-
+    <script src="/assets/js/scripActualizar.js" type="module"></script>
     <title>Document</title>
 </head>
 <body>
@@ -23,11 +22,6 @@
     <input type="radio" id="otro" name="genero"> Firebase <br>
 
     <button id="btnAsereje">esereje aja eje ture</button>
-
-    
-
-
-
 
 
 
